y.output
Terminaux inutilisés dans la grammaire

    tSPACE
    tTAB
    tENDL
    tMULTDEF
    tERROR
    '='
    '+'
    '-'
    '*'
    '/'


État 72 conflits: 4 décalage/réduction
État 73 conflits: 4 décalage/réduction
État 74 conflits: 4 décalage/réduction
État 75 conflits: 4 décalage/réduction
État 81 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Compilator $end

    1 $@1: %empty

    2 Compilator: tMAIN $@1 tOP tCP tOB Code tCB

    3 Code: Declarations Instructions
    4     | Declarations
    5     | Instructions

    6 Declarations: Declaration Declarations
    7             | Declaration

    8 $@2: %empty

    9 Declaration: tCONST $@2 Variables tSEMI

   10 $@3: %empty

   11 Declaration: tINT $@3 Variables tSEMI

   12 Variables: tID

   13 $@4: %empty

   14 Variables: tID $@4 tCOMMA Variables
   15          | tID tEQ Expr

   16 Instructions: Instruction Instructions
   17             | Instruction

   18 Instruction: Calcul
   19            | Func
   20            | Bloc

   21 Calcul: Expr tSEMI
   22       | tID tEQ Expr tSEMI

   23 Expr: Mul
   24     | Add
   25     | Sub
   26     | Div
   27     | Terme

   28 Mul: Expr tMUL Expr

   29 Add: Expr tADD Expr

   30 Sub: Expr tSUB Expr

   31 Div: Expr tDIV Expr

   32 Terme: tOP Expr tCP
   33      | tID
   34      | tINTVAL

   35 Func: Print tSEMI

   36 Bloc: If
   37     | While

   38 Print: tPRINT tOP tID tCP

   39 $@5: %empty

   40 $@6: %empty

   41 If: tIF tOP Cond tCP tOB $@5 Code tCB $@6 Else

   42 Else: %empty

   43 $@7: %empty

   44 $@8: %empty

   45 $@9: %empty

   46 Else: tELSE $@7 tOB $@8 Code $@9 tCB

   47 $@10: %empty

   48 Else: tELSE $@10 If

   49 Cond: Inf
   50     | Sup
   51     | Eq
   52     | InfEq
   53     | SupEq
   54     | Diff
   55     | And
   56     | Or
   57     | Not
   58     | Expr

   59 Inf: CondPart tINF CondPart

   60 Sup: CondPart tSUP CondPart

   61 Eq: CondPart tEQ tEQ CondPart

   62 InfEq: CondPart tINF tEQ CondPart

   63 SupEq: CondPart tSUP tEQ CondPart

   64 Diff: CondPart tNOT tEQ CondPart

   65 And: CondPart tAND CondPart

   66 Or: CondPart tOR CondPart

   67 Not: tNOT CondPart

   68 CondPart: Expr
   69         | tOP Cond tCP

   70 $@11: %empty

   71 While: tWHILE tOP Cond tCP tOB $@11 Code tCB


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    '=' (61)
    error (256)
    tMAIN (258) 2
    tOB (259) 2 41 46 71
    tCB (260) 2 41 46 71
    tCONST (261) 9
    tINT (262) 11
    tADD (263) 29
    tSUB (264) 30
    tMUL (265) 28
    tDIV (266) 31
    tEQ (267) 15 22 61 62 63 64
    tOP (268) 2 32 38 41 69 71
    tCP (269) 2 32 38 41 69 71
    tSPACE (270)
    tTAB (271)
    tCOMMA (272) 14
    tENDL (273)
    tSEMI (274) 9 11 21 22 35
    tPRINT (275) 38
    tMULTDEF (276)
    tERROR (277)
    tIF (278) 41
    tELSE (279) 46 48
    tWHILE (280) 71
    tSUP (281) 60 63
    tINF (282) 59 62
    tNOT (283) 64 67
    tAND (284) 65
    tOR (285) 66
    tINTVAL <nb> (286) 34
    tID <var> (287) 12 14 15 22 33 38


Non-terminaux, suivis des règles où ils apparaissent

    $accept (38)
        à gauche: 0
    Compilator (39)
        à gauche: 2
        à droite: 0
    $@1 (40)
        à gauche: 1
        à droite: 2
    Code (41)
        à gauche: 3 4 5
        à droite: 2 41 46 71
    Declarations (42)
        à gauche: 6 7
        à droite: 3 4 6
    Declaration (43)
        à gauche: 9 11
        à droite: 6 7
    $@2 (44)
        à gauche: 8
        à droite: 9
    $@3 (45)
        à gauche: 10
        à droite: 11
    Variables (46)
        à gauche: 12 14 15
        à droite: 9 11 14
    $@4 (47)
        à gauche: 13
        à droite: 14
    Instructions (48)
        à gauche: 16 17
        à droite: 3 5 16
    Instruction (49)
        à gauche: 18 19 20
        à droite: 16 17
    Calcul (50)
        à gauche: 21 22
        à droite: 18
    Expr (51)
        à gauche: 23 24 25 26 27
        à droite: 15 21 22 28 29 30 31 32 58 68
    Mul (52)
        à gauche: 28
        à droite: 23
    Add (53)
        à gauche: 29
        à droite: 24
    Sub (54)
        à gauche: 30
        à droite: 25
    Div (55)
        à gauche: 31
        à droite: 26
    Terme (56)
        à gauche: 32 33 34
        à droite: 27
    Func (57)
        à gauche: 35
        à droite: 19
    Bloc (58)
        à gauche: 36 37
        à droite: 20
    Print (59)
        à gauche: 38
        à droite: 35
    If (60)
        à gauche: 41
        à droite: 36 48
    $@5 (61)
        à gauche: 39
        à droite: 41
    $@6 (62)
        à gauche: 40
        à droite: 41
    Else (63)
        à gauche: 42 46 48
        à droite: 41
    $@7 (64)
        à gauche: 43
        à droite: 46
    $@8 (65)
        à gauche: 44
        à droite: 46
    $@9 (66)
        à gauche: 45
        à droite: 46
    $@10 (67)
        à gauche: 47
        à droite: 48
    Cond (68)
        à gauche: 49 50 51 52 53 54 55 56 57 58
        à droite: 41 69 71
    Inf (69)
        à gauche: 59
        à droite: 49
    Sup (70)
        à gauche: 60
        à droite: 50
    Eq (71)
        à gauche: 61
        à droite: 51
    InfEq (72)
        à gauche: 62
        à droite: 52
    SupEq (73)
        à gauche: 63
        à droite: 53
    Diff (74)
        à gauche: 64
        à droite: 54
    And (75)
        à gauche: 65
        à droite: 55
    Or (76)
        à gauche: 66
        à droite: 56
    Not (77)
        à gauche: 67
        à droite: 57
    CondPart (78)
        à gauche: 68 69
        à droite: 59 60 61 62 63 64 65 66 67
    While (79)
        à gauche: 71
        à droite: 37
    $@11 (80)
        à gauche: 70
        à droite: 71


État 0

    0 $accept: . Compilator $end

    tMAIN  décalage et aller à l'état 1

    Compilator  aller à l'état 2


État 1

    2 Compilator: tMAIN . $@1 tOP tCP tOB Code tCB

    $défaut  réduction par utilisation de la règle 1 ($@1)

    $@1  aller à l'état 3


État 2

    0 $accept: Compilator . $end

    $end  décalage et aller à l'état 4


État 3

    2 Compilator: tMAIN $@1 . tOP tCP tOB Code tCB

    tOP  décalage et aller à l'état 5


État 4

    0 $accept: Compilator $end .

    $défaut  accepter


État 5

    2 Compilator: tMAIN $@1 tOP . tCP tOB Code tCB

    tCP  décalage et aller à l'état 6


État 6

    2 Compilator: tMAIN $@1 tOP tCP . tOB Code tCB

    tOB  décalage et aller à l'état 7


État 7

    2 Compilator: tMAIN $@1 tOP tCP tOB . Code tCB

    tCONST   décalage et aller à l'état 8
    tINT     décalage et aller à l'état 9
    tOP      décalage et aller à l'état 10
    tPRINT   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tWHILE   décalage et aller à l'état 13
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 15

    Code          aller à l'état 16
    Declarations  aller à l'état 17
    Declaration   aller à l'état 18
    Instructions  aller à l'état 19
    Instruction   aller à l'état 20
    Calcul        aller à l'état 21
    Expr          aller à l'état 22
    Mul           aller à l'état 23
    Add           aller à l'état 24
    Sub           aller à l'état 25
    Div           aller à l'état 26
    Terme         aller à l'état 27
    Func          aller à l'état 28
    Bloc          aller à l'état 29
    Print         aller à l'état 30
    If            aller à l'état 31
    While         aller à l'état 32


État 8

    9 Declaration: tCONST . $@2 Variables tSEMI

    $défaut  réduction par utilisation de la règle 8 ($@2)

    $@2  aller à l'état 33


État 9

   11 Declaration: tINT . $@3 Variables tSEMI

    $défaut  réduction par utilisation de la règle 10 ($@3)

    $@3  aller à l'état 34


État 10

   32 Terme: tOP . Expr tCP

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 36
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 11

   38 Print: tPRINT . tOP tID tCP

    tOP  décalage et aller à l'état 37


État 12

   41 If: tIF . tOP Cond tCP tOB $@5 Code tCB $@6 Else

    tOP  décalage et aller à l'état 38


État 13

   71 While: tWHILE . tOP Cond tCP tOB $@11 Code tCB

    tOP  décalage et aller à l'état 39


État 14

   34 Terme: tINTVAL .

    $défaut  réduction par utilisation de la règle 34 (Terme)


État 15

   22 Calcul: tID . tEQ Expr tSEMI
   33 Terme: tID .

    tEQ  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 33 (Terme)


État 16

    2 Compilator: tMAIN $@1 tOP tCP tOB Code . tCB

    tCB  décalage et aller à l'état 41


État 17

    3 Code: Declarations . Instructions
    4     | Declarations .

    tOP      décalage et aller à l'état 10
    tPRINT   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tWHILE   décalage et aller à l'état 13
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 4 (Code)

    Instructions  aller à l'état 42
    Instruction   aller à l'état 20
    Calcul        aller à l'état 21
    Expr          aller à l'état 22
    Mul           aller à l'état 23
    Add           aller à l'état 24
    Sub           aller à l'état 25
    Div           aller à l'état 26
    Terme         aller à l'état 27
    Func          aller à l'état 28
    Bloc          aller à l'état 29
    Print         aller à l'état 30
    If            aller à l'état 31
    While         aller à l'état 32


État 18

    6 Declarations: Declaration . Declarations
    7             | Declaration .

    tCONST  décalage et aller à l'état 8
    tINT    décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 7 (Declarations)

    Declarations  aller à l'état 43
    Declaration   aller à l'état 18


État 19

    5 Code: Instructions .

    $défaut  réduction par utilisation de la règle 5 (Code)


État 20

   16 Instructions: Instruction . Instructions
   17             | Instruction .

    tOP      décalage et aller à l'état 10
    tPRINT   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tWHILE   décalage et aller à l'état 13
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 17 (Instructions)

    Instructions  aller à l'état 44
    Instruction   aller à l'état 20
    Calcul        aller à l'état 21
    Expr          aller à l'état 22
    Mul           aller à l'état 23
    Add           aller à l'état 24
    Sub           aller à l'état 25
    Div           aller à l'état 26
    Terme         aller à l'état 27
    Func          aller à l'état 28
    Bloc          aller à l'état 29
    Print         aller à l'état 30
    If            aller à l'état 31
    While         aller à l'état 32


État 21

   18 Instruction: Calcul .

    $défaut  réduction par utilisation de la règle 18 (Instruction)


État 22

   21 Calcul: Expr . tSEMI
   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr

    tADD   décalage et aller à l'état 45
    tSUB   décalage et aller à l'état 46
    tMUL   décalage et aller à l'état 47
    tDIV   décalage et aller à l'état 48
    tSEMI  décalage et aller à l'état 49


État 23

   23 Expr: Mul .

    $défaut  réduction par utilisation de la règle 23 (Expr)


État 24

   24 Expr: Add .

    $défaut  réduction par utilisation de la règle 24 (Expr)


État 25

   25 Expr: Sub .

    $défaut  réduction par utilisation de la règle 25 (Expr)


État 26

   26 Expr: Div .

    $défaut  réduction par utilisation de la règle 26 (Expr)


État 27

   27 Expr: Terme .

    $défaut  réduction par utilisation de la règle 27 (Expr)


État 28

   19 Instruction: Func .

    $défaut  réduction par utilisation de la règle 19 (Instruction)


État 29

   20 Instruction: Bloc .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 30

   35 Func: Print . tSEMI

    tSEMI  décalage et aller à l'état 50


État 31

   36 Bloc: If .

    $défaut  réduction par utilisation de la règle 36 (Bloc)


État 32

   37 Bloc: While .

    $défaut  réduction par utilisation de la règle 37 (Bloc)


État 33

    9 Declaration: tCONST $@2 . Variables tSEMI

    tID  décalage et aller à l'état 51

    Variables  aller à l'état 52


État 34

   11 Declaration: tINT $@3 . Variables tSEMI

    tID  décalage et aller à l'état 51

    Variables  aller à l'état 53


État 35

   33 Terme: tID .

    $défaut  réduction par utilisation de la règle 33 (Terme)


État 36

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr
   32 Terme: tOP Expr . tCP

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48
    tCP   décalage et aller à l'état 54


État 37

   38 Print: tPRINT tOP . tID tCP

    tID  décalage et aller à l'état 55


État 38

   41 If: tIF tOP . Cond tCP tOB $@5 Code tCB $@6 Else

    tOP      décalage et aller à l'état 56
    tNOT     décalage et aller à l'état 57
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 58
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    Cond      aller à l'état 59
    Inf       aller à l'état 60
    Sup       aller à l'état 61
    Eq        aller à l'état 62
    InfEq     aller à l'état 63
    SupEq     aller à l'état 64
    Diff      aller à l'état 65
    And       aller à l'état 66
    Or        aller à l'état 67
    Not       aller à l'état 68
    CondPart  aller à l'état 69


État 39

   71 While: tWHILE tOP . Cond tCP tOB $@11 Code tCB

    tOP      décalage et aller à l'état 56
    tNOT     décalage et aller à l'état 57
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 58
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    Cond      aller à l'état 70
    Inf       aller à l'état 60
    Sup       aller à l'état 61
    Eq        aller à l'état 62
    InfEq     aller à l'état 63
    SupEq     aller à l'état 64
    Diff      aller à l'état 65
    And       aller à l'état 66
    Or        aller à l'état 67
    Not       aller à l'état 68
    CondPart  aller à l'état 69


État 40

   22 Calcul: tID tEQ . Expr tSEMI

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 71
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 41

    2 Compilator: tMAIN $@1 tOP tCP tOB Code tCB .

    $défaut  réduction par utilisation de la règle 2 (Compilator)


État 42

    3 Code: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 3 (Code)


État 43

    6 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 6 (Declarations)


État 44

   16 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 16 (Instructions)


État 45

   29 Add: Expr tADD . Expr

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 72
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 46

   30 Sub: Expr tSUB . Expr

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 73
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 47

   28 Mul: Expr tMUL . Expr

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 74
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 48

   31 Div: Expr tDIV . Expr

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 75
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 49

   21 Calcul: Expr tSEMI .

    $défaut  réduction par utilisation de la règle 21 (Calcul)


État 50

   35 Func: Print tSEMI .

    $défaut  réduction par utilisation de la règle 35 (Func)


État 51

   12 Variables: tID .
   14          | tID . $@4 tCOMMA Variables
   15          | tID . tEQ Expr

    tEQ  décalage et aller à l'état 76

    tCOMMA    réduction par utilisation de la règle 13 ($@4)
    $défaut  réduction par utilisation de la règle 12 (Variables)

    $@4  aller à l'état 77


État 52

    9 Declaration: tCONST $@2 Variables . tSEMI

    tSEMI  décalage et aller à l'état 78


État 53

   11 Declaration: tINT $@3 Variables . tSEMI

    tSEMI  décalage et aller à l'état 79


État 54

   32 Terme: tOP Expr tCP .

    $défaut  réduction par utilisation de la règle 32 (Terme)


État 55

   38 Print: tPRINT tOP tID . tCP

    tCP  décalage et aller à l'état 80


État 56

   32 Terme: tOP . Expr tCP
   69 CondPart: tOP . Cond tCP

    tOP      décalage et aller à l'état 56
    tNOT     décalage et aller à l'état 57
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 81
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    Cond      aller à l'état 82
    Inf       aller à l'état 60
    Sup       aller à l'état 61
    Eq        aller à l'état 62
    InfEq     aller à l'état 63
    SupEq     aller à l'état 64
    Diff      aller à l'état 65
    And       aller à l'état 66
    Or        aller à l'état 67
    Not       aller à l'état 68
    CondPart  aller à l'état 69


État 57

   67 Not: tNOT . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 84


État 58

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr
   58 Cond: Expr .
   68 CondPart: Expr .

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    tCP       réduction par utilisation de la règle 58 (Cond)
    $défaut  réduction par utilisation de la règle 68 (CondPart)


État 59

   41 If: tIF tOP Cond . tCP tOB $@5 Code tCB $@6 Else

    tCP  décalage et aller à l'état 85


État 60

   49 Cond: Inf .

    $défaut  réduction par utilisation de la règle 49 (Cond)


État 61

   50 Cond: Sup .

    $défaut  réduction par utilisation de la règle 50 (Cond)


État 62

   51 Cond: Eq .

    $défaut  réduction par utilisation de la règle 51 (Cond)


État 63

   52 Cond: InfEq .

    $défaut  réduction par utilisation de la règle 52 (Cond)


État 64

   53 Cond: SupEq .

    $défaut  réduction par utilisation de la règle 53 (Cond)


État 65

   54 Cond: Diff .

    $défaut  réduction par utilisation de la règle 54 (Cond)


État 66

   55 Cond: And .

    $défaut  réduction par utilisation de la règle 55 (Cond)


État 67

   56 Cond: Or .

    $défaut  réduction par utilisation de la règle 56 (Cond)


État 68

   57 Cond: Not .

    $défaut  réduction par utilisation de la règle 57 (Cond)


État 69

   59 Inf: CondPart . tINF CondPart
   60 Sup: CondPart . tSUP CondPart
   61 Eq: CondPart . tEQ tEQ CondPart
   62 InfEq: CondPart . tINF tEQ CondPart
   63 SupEq: CondPart . tSUP tEQ CondPart
   64 Diff: CondPart . tNOT tEQ CondPart
   65 And: CondPart . tAND CondPart
   66 Or: CondPart . tOR CondPart

    tEQ   décalage et aller à l'état 86
    tSUP  décalage et aller à l'état 87
    tINF  décalage et aller à l'état 88
    tNOT  décalage et aller à l'état 89
    tAND  décalage et aller à l'état 90
    tOR   décalage et aller à l'état 91


État 70

   71 While: tWHILE tOP Cond . tCP tOB $@11 Code tCB

    tCP  décalage et aller à l'état 92


État 71

   22 Calcul: tID tEQ Expr . tSEMI
   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr

    tADD   décalage et aller à l'état 45
    tSUB   décalage et aller à l'état 46
    tMUL   décalage et aller à l'état 47
    tDIV   décalage et aller à l'état 48
    tSEMI  décalage et aller à l'état 93


État 72

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   29    | Expr tADD Expr .
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    tADD      [réduction par utilisation de la règle 29 (Add)]
    tSUB      [réduction par utilisation de la règle 29 (Add)]
    tMUL      [réduction par utilisation de la règle 29 (Add)]
    tDIV      [réduction par utilisation de la règle 29 (Add)]
    $défaut  réduction par utilisation de la règle 29 (Add)


État 73

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   30    | Expr tSUB Expr .
   31 Div: Expr . tDIV Expr

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    tADD      [réduction par utilisation de la règle 30 (Sub)]
    tSUB      [réduction par utilisation de la règle 30 (Sub)]
    tMUL      [réduction par utilisation de la règle 30 (Sub)]
    tDIV      [réduction par utilisation de la règle 30 (Sub)]
    $défaut  réduction par utilisation de la règle 30 (Sub)


État 74

   28 Mul: Expr . tMUL Expr
   28    | Expr tMUL Expr .
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    tADD      [réduction par utilisation de la règle 28 (Mul)]
    tSUB      [réduction par utilisation de la règle 28 (Mul)]
    tMUL      [réduction par utilisation de la règle 28 (Mul)]
    tDIV      [réduction par utilisation de la règle 28 (Mul)]
    $défaut  réduction par utilisation de la règle 28 (Mul)


État 75

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr
   31    | Expr tDIV Expr .

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    tADD      [réduction par utilisation de la règle 31 (Div)]
    tSUB      [réduction par utilisation de la règle 31 (Div)]
    tMUL      [réduction par utilisation de la règle 31 (Div)]
    tDIV      [réduction par utilisation de la règle 31 (Div)]
    $défaut  réduction par utilisation de la règle 31 (Div)


État 76

   15 Variables: tID tEQ . Expr

    tOP      décalage et aller à l'état 10
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr   aller à l'état 94
    Mul    aller à l'état 23
    Add    aller à l'état 24
    Sub    aller à l'état 25
    Div    aller à l'état 26
    Terme  aller à l'état 27


État 77

   14 Variables: tID $@4 . tCOMMA Variables

    tCOMMA  décalage et aller à l'état 95


État 78

    9 Declaration: tCONST $@2 Variables tSEMI .

    $défaut  réduction par utilisation de la règle 9 (Declaration)


État 79

   11 Declaration: tINT $@3 Variables tSEMI .

    $défaut  réduction par utilisation de la règle 11 (Declaration)


État 80

   38 Print: tPRINT tOP tID tCP .

    $défaut  réduction par utilisation de la règle 38 (Print)


État 81

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr
   32 Terme: tOP Expr . tCP
   58 Cond: Expr .
   68 CondPart: Expr .

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48
    tCP   décalage et aller à l'état 54

    tCP       [réduction par utilisation de la règle 58 (Cond)]
    $défaut  réduction par utilisation de la règle 68 (CondPart)


État 82

   69 CondPart: tOP Cond . tCP

    tCP  décalage et aller à l'état 96


État 83

   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr
   68 CondPart: Expr .

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 68 (CondPart)


État 84

   67 Not: tNOT CondPart .

    $défaut  réduction par utilisation de la règle 67 (Not)


État 85

   41 If: tIF tOP Cond tCP . tOB $@5 Code tCB $@6 Else

    tOB  décalage et aller à l'état 97


État 86

   61 Eq: CondPart tEQ . tEQ CondPart

    tEQ  décalage et aller à l'état 98


État 87

   60 Sup: CondPart tSUP . CondPart
   63 SupEq: CondPart tSUP . tEQ CondPart

    tEQ      décalage et aller à l'état 99
    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 100


État 88

   59 Inf: CondPart tINF . CondPart
   62 InfEq: CondPart tINF . tEQ CondPart

    tEQ      décalage et aller à l'état 101
    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 102


État 89

   64 Diff: CondPart tNOT . tEQ CondPart

    tEQ  décalage et aller à l'état 103


État 90

   65 And: CondPart tAND . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 104


État 91

   66 Or: CondPart tOR . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 105


État 92

   71 While: tWHILE tOP Cond tCP . tOB $@11 Code tCB

    tOB  décalage et aller à l'état 106


État 93

   22 Calcul: tID tEQ Expr tSEMI .

    $défaut  réduction par utilisation de la règle 22 (Calcul)


État 94

   15 Variables: tID tEQ Expr .
   28 Mul: Expr . tMUL Expr
   29 Add: Expr . tADD Expr
   30 Sub: Expr . tSUB Expr
   31 Div: Expr . tDIV Expr

    tADD  décalage et aller à l'état 45
    tSUB  décalage et aller à l'état 46
    tMUL  décalage et aller à l'état 47
    tDIV  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 15 (Variables)


État 95

   14 Variables: tID $@4 tCOMMA . Variables

    tID  décalage et aller à l'état 51

    Variables  aller à l'état 107


État 96

   69 CondPart: tOP Cond tCP .

    $défaut  réduction par utilisation de la règle 69 (CondPart)


État 97

   41 If: tIF tOP Cond tCP tOB . $@5 Code tCB $@6 Else

    $défaut  réduction par utilisation de la règle 39 ($@5)

    $@5  aller à l'état 108


État 98

   61 Eq: CondPart tEQ tEQ . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 109


État 99

   63 SupEq: CondPart tSUP tEQ . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 110


État 100

   60 Sup: CondPart tSUP CondPart .

    $défaut  réduction par utilisation de la règle 60 (Sup)


État 101

   62 InfEq: CondPart tINF tEQ . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 111


État 102

   59 Inf: CondPart tINF CondPart .

    $défaut  réduction par utilisation de la règle 59 (Inf)


État 103

   64 Diff: CondPart tNOT tEQ . CondPart

    tOP      décalage et aller à l'état 56
    tINTVAL  décalage et aller à l'état 14
    tID      décalage et aller à l'état 35

    Expr      aller à l'état 83
    Mul       aller à l'état 23
    Add       aller à l'état 24
    Sub       aller à l'état 25
    Div       aller à l'état 26
    Terme     aller à l'état 27
    CondPart  aller à l'état 112


État 104

   65 And: CondPart tAND CondPart .

    $défaut  réduction par utilisation de la règle 65 (And)


État 105

   66 Or: CondPart tOR CondPart .

    $défaut  réduction par utilisation de la règle 66 (Or)


État 106

   71 While: tWHILE tOP Cond tCP tOB . $@11 Code tCB

    $défaut  réduction par utilisation de la règle 70 ($@11)

    $@11  aller à l'état 113


État 107
